mdapiout/objects/Mix_Submitted__e.object
<CustomObject>
    <label>Mix Submitted</label>
    <pluralLabel>Mixes Submitted</pluralLabel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mix_Id__c</fullName>
        <label>Mix Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mix_Name__c</fullName>
        <label>Mix Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>